created controller for programmingQuestion